# SujDjango

suj/: pyproject.toml
suj/src/: manage.py
suj/src/suj/: asgi.py  settings.py  urls.py  wsgi.py
suj/src/sujauth/: apps.py  email.py  models.py  serializers.py  urls.py  views.py
suj/src/sujauth/migrations/: 0001_initial.py  0002_user_campus.py  0003_alter_user_email.py  0004_alter_user_campus.py
suj/src/sujauth/templates/sujauth/: activate.html  mail.html
